  **************************
  * v2.0.4
  **************************

    * Fixed bug CORE-1775
        Bad performance of the security checking during prepare
      Contributor(s):
        Vlad Horsun <horsun at kdb.dp.ua>

    * Fixed bug CORE-1774
        Problem with collate ES_ES_CI_AI
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Fixed bug CORE-1746
        Expression index can be created while doing inserts into table
      Contributor(s):
        Vlad Horsun <horsun at kdb.dp.ua>

    * Fixed bug CORE-1731
        Sometimes the engine may "hang" using 100% CPU load and no IO activity for a few minutes
      Contributor(s):
        Vlad Horsun <horsun at kdb.dp.ua>

    * Fixed bug CORE-1726
        Failure in isc_service_start()
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Fixed bug CORE-1702
        Wrong record number calculation in garbage collector thread
      Contributor(s):
        Vlad Horsun <horsun at kdb.dp.ua>

    * Fixed bug CORE-1681
        Garbage data in the incoming remote packet may crash the server
      Contributor(s):
        Dmitry Yemanov <yemanov at yandex.ru>

    * Fixed bug CORE-1680
        "gsec display" only shows some first users
        when there are many users (>50) in security database
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Fixed bug CORE-1679
        Garbage bytes in isc_service_query() output
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Fixed bug CORE-1674
        Wrong access rights in doc subdirectory
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Fixed bug CORE-1657
        AV with long inactive read-only read-commited transaction
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Fixed bug CORE-1644
        Compilation error on GCC 4.1.1
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Fixed bug CORE-1610